release 1.2 (03-2010)
- Fixed issue 465
  https://jersey.dev.java.net/issues/show_bug.cgi?id=465
  Refactored ResourceConfig; now its possible to use delimiters ';', ',' and ' '
  (space) to separate class names in various init parameters like filters and
  filter factories declaration, classpath, class and package names specification.
  Intended consequence is that FilterFactory now uses ResourceConfig to get list
  of filters/filter factories so its possible to programatically add filters
  to ones defined in web.xml.
- Modified the resolving of "flat-file" templates so the location is
    '/' + resourceClass.getName().replace('.', '/').replace('$', '.') + '.' + path
  Thus if there is a resource class named com.Foo and there is an index.html
  template then the path to the template can be:
    com/Foo.index.html
  in addition to:
    com/Foo/index.html
  Thus templates can be co-located with Java class files rather than in
  sub-directories.
- Fixed issue 461
  https://jersey.dev.java.net/issues/show_bug.cgi?id=461
  An exception thrown from a resource method that is mapped to a response
  will have the appropriate Content-Type set, if an entity is present and if not
  already set from the mapped response, as declared by the @Produces annotation
  and what the client accepts.
- Fixed issue 433
  https://jersey.dev.java.net/issues/show_bug.cgi?id=433
  OAuth signature calculation correctly encodes request parameters according
  to the unreserved character set defined in the URI specifications.
  RSA_SHA1 support correctly URL encodes the base64 encoding of the signature.
- Fixed issue 468
  https://jersey.dev.java.net/issues/show_bug.cgi?id=468
  If URI canonicalization, and optionally URI normalization is set to true, but
  redirection is set to false (the default) then the request URI is modified to
  be the canonicalized, and optionally normalized, URI.
- Fixed issue 464
  https://jersey.dev.java.net/issues/show_bug.cgi?id=464