@@ -56,13 +56,13 @@
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-servlet-webserver</artifactId>
-            <version>1.9.9</version>
+            <version>1.9.18-i</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-http-webserver</artifactId>
-            <version>1.9.9</version>
+            <version>1.9.18-i</version>
             <scope>test</scope>
         </dependency>
         <dependency>
