@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-servlet-webserver</artifactId>
-            <version>1.9.8</version>
+            <version>1.9.18-i</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
