@@ -70,7 +70,7 @@
                 <dependency>
                     <groupId>com.sun.grizzly</groupId>
                     <artifactId>grizzly-servlet-webserver</artifactId>
-                    <version>1.9.8</version>
+                    <version>1.9.18-i</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
@@ -94,7 +94,7 @@
                 <dependency>
                     <groupId>com.sun.grizzly</groupId>
                     <artifactId>grizzly-servlet-webserver</artifactId>
-                    <version>1.9.8</version>
+                    <version>1.9.18-i</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
@@ -119,7 +119,7 @@
                 <dependency>
                     <groupId>com.sun.grizzly</groupId>
                     <artifactId>grizzly-servlet-webserver</artifactId>
-                    <version>1.9.8</version>
+                    <version>1.9.18-i</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
