@@ -74,7 +74,7 @@
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-servlet-webserver</artifactId>
-            <version>1.9.10</version>
+            <version>1.9.18-i</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
