@@ -1,4 +1,5 @@
 release 1.2 (03-2010)
+- Upgrade from Grizzly 1.9.8 to Grizzly 1.9.18-i
 - Fixed issue 465
   https://jersey.dev.java.net/issues/show_bug.cgi?id=465
   Refactored ResourceConfig; now its possible to use delimiters ';', ',' and ' '
